od/2.0/es/index.markdown
---
title: Definición de Conocimiento Abierto
layout: page
---

Versión: 2.0

La Definición de Conocimiento Abierto aporta precisión al significado del término «abierto» (open) cuando se aplica al conocimiento y promueve un procomún robusto en el que cualquiera puede participar, maximizando su interoperabilidad.

**Resumen:** *El conocimiento es abierto si cualquiera es libre para acceder a él, usarlo, modificarlo y compartirlo bajo condiciones que, como mucho, preserven su autoría y su apertura.*

Este significado esencial se corresponde con el de abierto (open) cuando se refiere al software, como en la [Open Source Definition] (https://opensource.org/docs/osd), y es un sinónimo de libre (free) en el sentido de la [Definition of Free Cultural Works](http://freedomdefined.org/Definition/Es), que a su vez deriva de las directrices de [Debian Free Software Guidelines](http://www.debian.org/social_contract).


El término **obra** se utilizará para denominar cualquier elemento o porción de conocimiento que pueda intercambiarse.

El término **licencia** se refiere a las condiciones legales bajo las cuales está disponible la obra. Cuando no se habilite ninguna licencia, se interpretará que se refiere a las condiciones legales por defecto bajo las cuales se proporciona la obra (por ejemplo *copyright* o dominio público).

## 1. Obra abierta

Una **obra** abierta debe satisfacer los siguientes requisitos cuando se distribuye:

### 1.1 licencia abierta

La **obra** debe estar disponible bajo una **licencia** abierta (tal y como se define en la sección 2. Cualesquiera términos adicionales que acompañen a la obra (como términos de uso o patentes en posesión del licenciatario) *no deben* contradecir los términos de la licencia.


### 1.2 Acceso

La **obra** debe estar disponible como un todo y a no más de un coste razonable de reproducción, preferiblemente descargable de manera gratuita a través de Internet. Cualquier información adicional necesaria para aplicar la licencia (como los nombres de aquellos que han contribuido en ella y que sean necesarios para cumplir los requisitos de reconocimiento) *deben* acompañar también a la obra.

### 1.3 Formato abierto

La **obra** debe proporcionarse en forma conveniente y modificable, de manera que no haya obstáculos tecnológicos innecesarios para la eficaz aplicación de los derechos otorgados por la licencia. Concretamente, los datos deben poder ser leídos automáticamente, estar disponibles de una sola vez y proporcionarse en un formato abierto (es decir, un formato que tenga sus especificaciones disponibles pública, libre y gratuitamente, que no imponga restricciones, económicas o de otro tipo sobre su uso) o, al menos, que puedan ser procesados con una herramienta de *software* libre.


## 2. Licencias abiertas

Una **licencia** es abierta si sus términos satisfacen las siguientes condiciones:

### 2.1 Permisos requeridos

La **licencia** debe de manera irrevocable permitir lo siguiente:

#### 2.1.1 Uso

La **licencia** debe permitir el uso libre de la obra licenciada.

#### 2.1.2 Redistribución

La **licencia** debe permitir la redistribución de la obra licenciada, incluyendo su venta, en sí misma o como parte de una colección formada por obras de diferentes fuentes.

#### 2.1.3 Modificación

La **licencia** debe permitir la creación de obras derivadas de la obra licenciada y la distribución de tales derivados en los mismos términos que la obra original licenciada.

#### 2.1.4 Separación

La **licencia** debe permitir que cualquier parte de la obra sea libremente usada, distribuida o modificada por separado de cualquier otra parte de la obra o de cualquier colección de obras en la que fuera originalmente distribuida. Todas las partes que reciben una distribución de cualquier parte de una obra en los términos de la licencia original deben tener los mismos derechos que aquellos que están garantizados en relación a la obra original.

#### 2.1.5 Compilación

La **licencia** debe permitir distribuir la obra licenciada junto con otras obras distintas sin poner restricciones sobre esas otras obras.

#### 2.1.6 No discriminación

La **licencia** no debe discriminar a ninguna persona o grupo.

#### 2.1.7 Propagación

Los derechos ligados a la obra *deben* aplicarse a toda persona a quien le sea redistribuida sin necesidad de aceptar ningún término legal adicional.

#### 2.1.8 Aplicación para cualquier propósito

La **licencia** *debe* permitir el uso, redistribución, modificación y compilación con cualquier propósito. La licencia no debe restringir a nadie hacer uso de la obra en un campo específico de aplicación o trabajo.

#### 2.1.9 Sin coste

La **licencia** *no debe* imponer como parte de sus condiciones ningún esquema de tarifas, regalías (*royalties*) o cualquier otra compensación o remuneración económica.

### 2.2 Condiciones aceptables

La **licencia** no debe limitar, hacer inciertos o disminuir los permisos requeridos en la sección 2.1 a excepción de las siguientes condiciones:

#### 2.2.1 Reconocimiento

La **licencia** *puede* requerir que las distribuciones de la obra incluyan el reconocimiento de los que han contribuido a ella, los propietarios de los derechos, patrocinadores y creadores mientras que tales prescripciones no sean onerosas.

#### 2.2.2 Integridad

La **licencia** *puede* requerir que las versiones modificadas de la obra licenciada lleven un nombre o número de versión diferente de la de la obra original, o bien que se indiquen los cambios realizados.

#### 2.2.3 Compartir igual

La **licencia** *puede* requerir que las copias u obras derivadas de la obra licenciada permanezcan bajo la misma licencia, o una similar a la original.

#### 2.2.4 Aviso

La **licencia** *puede* requerir que se mantenga el aviso de derechos de autor (*copyright*) y la identificación de la licencia originales.

#### 2.2.5 Fuente

La **licencia** *puede* requerir que las obras modificadas estén disponibles en una forma preferida para posteriores modificaciones.

#### 2.2.6 Prohibición de restricciones técnicas

La **licencia** *puede* prohibir la distribución de la obra cuando haya condiciones técnicas que impongan restricciones sobre el ejercicio de derechos en otro caso permitidos.

#### 2.2.7 No agresión

La **licencia** *puede* requerir a quien modifique la obra que garantice los permisos públicos adicionales (por ejemplo, licencias de patentes) requeridos para el ejercicio de los derechos otorgados por la licencia. La licencia puede también condicionar los permisos a la no agresión contra los titulares de la licencia con respecto al ejercicio de cualquier derecho permitido (por ejemplo, litigios sobre patentes).

*translated by [Antonio F. Rodríguez](mailto:afrodriguez@fomento.es) and Lorena Hernández*
