od/2.1/es/index.markdown
---
title: Definición de Conocimiento Abierto
layout: page
---

Versión: 2.1

La Definición de Conocimiento Abierto aporta precisión al significado del término «abierto» (open) cuando se aplica al conocimiento, promueve un procomún robusto en el que cualquiera puede participar y maximiza su interoperabilidad.

**Resumen:** *El conocimiento es abierto si cualquiera es libre de acceder a él, usarlo, modificarlo y compartirlo, estando sujeto a lo sumo a medidas que preserven su autoría y su apertura.*

Este significado esencial se corresponde con el de «abierto» (open) cuando se refiere al software, como en la [Open Source Definition](https://es.wikipedia.org/wiki/Open_Source_Definition), y es un sinónimo de «libre» (free) tal y como se usa en la [Definición de Software Libre](https://es.wikipedia.org/wiki/Definici%C3%B3n_de_Software_Libre) y en la [Definición de Obras Culturales libres](https://es.wikipedia.org/wiki/Definici%C3%B3n_de_obras_culturales_libres) .


El término **obra** se utilizará para denominar el ítem o porción de conocimiento a transferir.

El término **licencia** se refiere a las condiciones legales bajo las cuales está disponible la obra.

La expresión **dominio público** denota la ausencia de derechos de autor (copyright) y de restricciones similares, ya sea por defecto o por la renuncia a dichas condiciones.

En este documento hay que interpretar las palabras clave «*debe*» (must), «*no debe*» (must not), «*debería*» (should) y «*puede*» (may) tal y como se describe en [RFC2119](https://tools.ietf.org/html/rfc2119).

## 1. Obra abierta

Una **obra** abierta *debe* satisfacer los siguientes requisitos cuando se distribuye:

### 1.1 Licencia abierta o estatus

La **obra** *debe* estar en el **dominio público** o disponible bajo una **licencia** abierta (tal y como se define en la sección 2). Cualesquiera términos adicionales que acompañen a la obra (como términos de uso o patentes en posesión del licenciatario) *no *deben* contradecir el estatus de dominio público o los términos de la licencia.

### 1.2 Acceso

La **obra** *debe* estar disponible como un todo y a no más del coste razonable de una reproducción, y *debería* ser descargable de manera gratuita a través de Internet. Cualquier información adicional necesaria para aplicar la licencia (como los nombres de aquellos que han contribuido a ella y que sean necesarios para cumplir los requisitos de reconocimiento) *deben* acompañar también a la obra.

### 1.3 Legible por máquina

La **obra** *debe* proporcionarse de manera que sea procesable por computador y en que sus elementos individuales puedan ser fácilmente accedidos y modificados.

### 1.4 Formato abierto

La **obra** *debe* proporcionarse en un formato abierto. Un formato abierto es el que no impone restricciones, económicas o de otro tipo, sobre su uso y que puede ser completamente procesado con al menos una herramienta de software libre/código abierto.

## 2. Licencias abiertas

Una **licencia** *debería* ser compatible con otras licencias abiertas.

Una **licencia** es abierta si sus términos satisfacen las siguientes condiciones:

### 2.1 Permisos requeridos

La **licencia** *debe* de manera irrevocable permitir lo siguiente:

#### 2.1.1 Uso

La **licencia** *debe* permitir el uso libre de la obra licenciada.

#### 2.1.2 Redistribución

La **licencia** *debe* permitir la redistribución de la obra licenciada, incluyendo su venta, en sí misma o como parte de una colección formada por obras de diferentes fuentes.

#### 2.1.3 Modificación

La **licencia** *debe* permitir la creación de obras derivadas de la obra licenciada y la distribución de tales derivados en los mismos términos que la obra original licenciada.

#### 2.1.4 Separación

La **licencia** *debe* permitir que cualquier parte de la obra sea libremente usada, distribuida o modificada por separado de cualquier otra parte de la obra o de cualquier colección de obras en la que fuera originalmente distribuida. Todas las partes que reciben una distribución de cualquier parte de una obra bajo los términos de la licencia original *deben* tener los mismos derechos que aquellos que están concedidos en conjunción con la obra original.

#### 2.1.5 Compilación

La **licencia** *debe* permitir distribuir la obra licenciada junto con otras obras distintas sin poner restricciones sobre esas otras obras.

#### 2.1.6 No discriminación

La **licencia** *no debe* discriminar a ninguna persona o grupo.

#### 2.1.7 Propagación

Los derechos ligados a la obra *deben* aplicarse a toda persona a quien le sea redistribuida sin necesidad de aceptar ningún término legal adicional.

#### 2.1.8 Aplicación para cualquier propósito

La **licencia** *debe* permitir el uso, redistribución, modificación y compilación con cualquier propósito. La licencia *no debe* restringir a nadie hacer uso de la obra en un campo específico de aplicación o trabajo.

#### 2.1.9 Sin coste

La **licencia** *no debe* imponer como parte de sus condiciones ningún modelo de tarifas, regalías (royalties) o cualquier otra compensación o remuneración económica.

### 2.2 Condiciones aceptables

La **licencia** *no debe* limitar, hacer inciertos o disminuir los permisos requeridos en la sección 2.1 a excepción de las siguientes condiciones permisibles:

#### 2.2.1 Reconocimiento

La **licencia** *puede* requerir que las distribuciones de la obra incluyan el reconocimiento de los que han contribuido a ella, los propietarios de los derechos, patrocinadores y creadores mientras que tales prescripciones no sean onerosas.

#### 2.2.2 Integridad

La **licencia** *puede* requerir que las versiones modificadas de la obra licenciada lleven un nombre o número de versión diferente de la de la obra original, o bien que se indiquen los cambios realizados.

#### 2.2.3 Compartir igual

La **licencia** *puede* requerir que las redistribuciones de la obra permanezcan bajo la misma licencia o una similar.

#### 2.2.4 Aviso

La **licencia** *puede* requerir que se mantenga el aviso de derechos de autor (copyright) original y la identificación de la licencia.

#### 2.2.5 Fuente

La **licencia** *puede* requerir que cualquiera que distribuya la obra, proporcione a los destinatarios acceso a la forma preferida para realizar modificaciones.

#### 2.2.6 Prohibición de restricciones técnicas

La **licencia** *puede* requerir que las distribuciones de la obra permanezcan libres de cualesquiera medidas técnicas que pudieran restringir el ejercicio de derechos en otros casos permitidos.

#### 2.2.7 No agresión

La **licencia** *puede* requerir a quien modifique la obra que garantice los permisos públicos adicionales (por ejemplo, licencias de patentes) requeridos para el ejercicio de los derechos otorgados por la licencia. La licencia puede también condicionar los permisos a la no agresión contra los titulares de la licencia con respecto al ejercicio de cualquier derecho permitido (por ejemplo, litigios sobre patentes).

----
*La Definición de Conocimiento Abierto fue derivada inicialmente de la Definición de Código Abierto, que a su vez se había derivado de las Directrices de Software Libre de Debian y del Contrato Social Debian, de las que forman parte, que fueron creadas por Bruce Perens y los desarrolladores Debian. Esta definición está substancialmente derivada de esos documentos y mantiene sus principios esenciales. Richard Stallman ha sido el primero en impulsar los ideales de la libertad del software que nosotros continuamos alentando.*

Traducido por Antonio F. Rodríguez y Lorena Hernández Quirós
